# gllc_exp

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  events.txt  glad.c  gllc_CTD.c  gllc_QTree.c  gllc_block.c  gllc_block_entity.c  gllc_circle.c  gllc_ctd.c  gllc_draw_buffer.c  gllc_drawing.c  gllc_font.c  gllc_layer.c  gllc_line_geom.c  gllc_object.c  gllc_point.c  gllc_polyline.c  gllc_rect.c  gllc_sparse_grid.c  gllc_vertex.c  gllc_window.c  gllc_window_cursor.c  gllc_window_grid.c  gllc_window_native_win32.c  gllc_window_selection.c  main.c  polylines.txt
docs/: LiteCAD.chw
include/: glad.h  gllc_CTD.h  gllc_QTree.h  gllc_block.h  gllc_block_entity.h  gllc_circle.h  gllc_ctd.h  gllc_draw_buffer.h  gllc_drawing.h  gllc_font.h  gllc_layer.h  gllc_line_geom.h  gllc_object.h  gllc_point.h  gllc_polyline.h  gllc_rect.h  gllc_sparse_grid.h  gllc_text.h  gllc_vertex.h  gllc_window.h  gllc_window_cursor.h  gllc_window_grid.h  gllc_window_native.h  gllc_window_selection.h
include/tess2/: tess2.h
libtess2/: CMakeLists.txt  bucketalloc.c  bucketalloc.h  dict.c  dict.h  mesh.h  priorityq.c  priorityq.h  tess.c  tess.h
shaders/: gllc_fragment_shader.frag  gllc_vertex_shader.vert
tools/: CMakeLists.txt  gen_font_h.c  gen_shader_h.c
